selfhost/test/typechecker/array/error_type_mismatch_bindingdecl.1.out
Error at %FILE_NAME%:1:17
Type mismatch
  |  val a: Int[] = ["1", "2", "3"]
                     ^
Expected: Int
but instead found: String
